--- a/build.gradle
+++ b/build.gradle
@@ -20,15 +20,18 @@ repositories {
         }
         url = uri('https://nexus.umbcraft.online/repository/umbcraft-repo/')
     }
-
     maven {
         url = uri('https://nexus.umbcraft.online/repository/proxies/')
+    }
+    maven {
+        url = uri('https://repo.maven.apache.org/maven2/')
     }
 }
 
 dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.github.bhlangonijr:chesslib:1.3.3'
+    implementation 'com.sparkjava:spark-core:2.9.4'
 }
 //
 // java {
