added jitpack to maven repo lists

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ repositories {
     maven {
         url = uri('https://repo.maven.apache.org/maven2/')
     }
+    maven {
+        url = uri('https://jitpack.io')
+    }
 }
 
 dependencies {
