--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.github.bhlangonijr:chesslib:1.3.3'
     implementation 'com.sparkjava:spark-core:2.9.4'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 //
 // java {
