--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -25,6 +25,7 @@ shadowJar {
 }
 dependencies {
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:3.+"
     implementation 'com.github.bhlangonijr:chesslib:1.3.3'
     implementation 'com.sparkjava:spark-core:2.9.4'
     implementation 'com.google.code.gson:gson:2.10.1'
