--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,9 +27,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:3.+'
     implementation 'com.github.bhlangonijr:chesslib:1.3.3'
+    implementation 'org.java-websocket:Java-WebSocket:1.5.3'
     implementation 'com.sparkjava:spark-core:2.9.4'
     implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'org.danilopianini:gson-extras:0.2.1'
 }
 
 tasks.withType(JavaCompile) {
