--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:3100
-REACT_APP_DUMMY_API_CALLS=true
+VITE_API_URL=http://localhost:3100
+VITE_DUMMY_API_CALLS=true
